feat: DEV-13 - Setup Junit Tests in the Application